fix(ui): links page content overflow

--- a/src/styles/prose.css
+++ b/src/styles/prose.css
@@ -8,7 +8,17 @@
 	@apply prose-img:rounded-none prose-img:sm:w-4/5 prose-img:sm:mx-auto prose-img:border prose-img:border-black/10;
 	@apply prose-figcaption:sm:text-center prose-figcaption:italic prose-figcaption:text-(--color-text-muted) prose-figcaption:sm:max-w-lg prose-figcaption:sm:mx-auto;
 
+	overflow-wrap: break-word;
+
+	:is(a, code):not(pre code) {
+		overflow-wrap: anywhere;
+	}
+
 	.footnotes ol {
 		@apply pl-10 text-sm lg:text-base;
 	}
+}
+
+.link-entry .prose-content > :last-child {
+	margin-bottom: 0;
 }
